--- a/components/DashBoard.css
+++ b/components/DashBoard.css
@@ -14,12 +14,14 @@
 .dashboardlinks{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
-    width: 40%;
     font-size: 1.2rem;
     font-weight: 700;
     color: black;
+}
+
+.btn{
+    padding-right: 50px;
 }
 
 .btn:hover{
