--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,3 @@
-body {
-padding: 0;
-margin: 0;
-}
-
-html{
-    padding: 0;
-    margin: 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
