--- a/app/create/shop/page.css
+++ b/app/create/shop/page.css
@@ -3,9 +3,15 @@ body{
     margin: 0px;
 }
 
+.bannercreateshop{
+    height: 100px;
+    background-color: black;
+    opacity: 0.85;
+}
+
 .shopinformation{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: #D5B9FA;
     opacity: 0.8;
 }
@@ -13,7 +19,6 @@ body{
 .shopinformationinput{
     display: flex;
     flex-direction: column;
-    width: 50%;
     margin: 20px;
 }
 
@@ -41,11 +46,16 @@ body{
 }
 
 .imagealternator{
-    margin: 20px;
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 400px;
 }
 
 .imagealternator img{
-    height: 500px;
-    border-radius: 8px;;
+    width: 80%;
+    height: 90%;
+    border-radius: 8px;
 }
