--- a/app/create/shop/page.css
+++ b/app/create/shop/page.css
@@ -41,8 +41,8 @@ body{
 
 .addoninput{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
 }
 
 .imagealternator{
@@ -59,3 +59,19 @@ body{
     height: 90%;
     border-radius: 8px;
 }
+
+.shop-icon-container {
+    position: relative;
+}
+  
+.shop-icon {
+    position: absolute;
+    top: -80px;
+    left: -500px; 
+}
+
+.shop-icon img {
+    width: 40%;
+    border-radius: 100%
+}
+  
