--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -5,16 +5,22 @@
     padding: 20px;
 }
 
+.bannersection{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 10px;
+}
+
 .imagealternator{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 60%;
     height: 400px;
-    padding-top: 20px;
 }
 
 .imagealternator img{
-    width: 60%;
+    width: 100%;
     height: 90%;
     border-radius: 8px;
 }
@@ -37,6 +43,14 @@
     align-items: flex-start;
 }
 
+.shopmaininfosecondsection{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    background-color: whitesmoke;
+    width: 70%;
+    margin-left: 10px;
+}
+
 .shoplocation{
     display: flex;
     flex-direction: row;
@@ -45,35 +59,89 @@
     margin-right: 4px;
 }
 
+.bannersectionsubsection{
+    margin: 10px;
+    width: 40%;
+}
+
+.shopdescription{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    background-color: whitesmoke;
+    padding: 10px;
+}
+
+.contactdetails{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    background-color: whitesmoke;
+    margin-top: 10px;
+    padding: 10px;
+}
+
 @media only screen and (max-width: 900px) {
-    .imagealternator img{
+    .imagealternator{
         width: 70%;
         height: 250px;
+    }
+
+    .imagealternator img{
+        height: 100%;
     }
 
     .shopmaininfofirstsection{
         width: 30%
     }
+
+    .bannersectionsubsection{
+        width: 30%;
+    }
 }
 
 @media only screen and (max-width: 772px) {
-    .imagealternator img{
+    .imagealternator{
         width: 100%;
         height: 250px;
+    }
+
+    .imagealternator img{
+        width: 100%;
+        height: 100%;
     }
 
     .shopmaininfofirstsection{
         width: 50%
     }
+
+    .bannersection{
+        flex-direction: column;
+    }
+
+    .bannersectionsubsection{
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 450px) {
+    .imagealternator{
+        width: 100%;
+        height: 200px; 
+    }
+
     .imagealternator img{
         width: 100%;
-        height: 200px;
+        height: 100%;
     }
 
     .shopmaininfofirstsection{
         width: 100%
+    }
+
+    .bannersection{
+        flex-direction: column;
+    }
+
+    .bannersectionsubsection{
+        width: 100%;
     }
 }
