--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -75,12 +75,38 @@
     padding: 10px;
 }
 
+.shoptitle{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    background-color: whitesmoke;
+    padding: 10px;
+    /* width: 68%; */
+}
+
 .contactdetails{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 10px;
     background-color: whitesmoke;
     margin-top: 10px;
     padding: 10px;
+}
+
+.contactdetailspress{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    background-color: whitesmoke;
+    padding: 10px;
+    margin-top: 10px;
+    /* width: 30%; */
+}
+
+.second{
+    display: none;
+    flex-direction: column;
+}
+
+.contactdetails:hover{
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 900px) {
@@ -99,6 +125,14 @@
 
     .bannersectionsubsection{
         width: 30%;
+    }
+
+    .first{
+        display: none;
+    }
+
+    .second{
+        display: flex;
     }
 }
 
@@ -124,6 +158,21 @@
     .bannersectionsubsection{
         width: 100%;
         margin: 0;
+    }
+
+    .contactdetailspress{
+        margin-top: 0;
+        width: 30%;
+    }
+
+    .shoptitle{
+        width: 68%;
+    }
+
+    .second{
+        justify-content: space-between;
+        padding-top: 10px;
+        flex-direction: row;
     }
 }
 
