--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -75,12 +75,19 @@
     padding: 10px;
 }
 
-.shoptitle{
+.shoptagline{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 10px;
     background-color: whitesmoke;
     padding: 10px;
-    /* width: 68%; */
+}
+
+.descriptionpress{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    background-color: whitesmoke;
+    margin-top: 10px;
+    padding: 10px;
 }
 
 .contactdetails{
@@ -162,11 +169,16 @@
 
     .contactdetailspress{
         margin-top: 0;
-        width: 30%;
+        width: 22%;
     }
 
-    .shoptitle{
-        width: 68%;
+    .descriptionpress{
+        width: 22%;
+        margin-top: 0;
+    }
+
+    .shoptagline{
+        width:50%;
     }
 
     .second{
