--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -116,6 +116,13 @@
     cursor: pointer;
 }
 
+.productsDisplay{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    width: 100%;
+}
+
 @media only screen and (max-width: 900px) {
     .imagealternator{
         width: 70%;
