--- a/app/create/shop/page.css
+++ b/app/create/shop/page.css
@@ -9,6 +9,14 @@ body{
     opacity: 0.85;
 }
 
+.tooltip{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    padding: 8px;
+    background-color: black;
+    color: white;
+}
+
 .shopinformation{
     display: flex;
     flex-direction: column;
@@ -19,6 +27,12 @@ body{
     display: flex;
     flex-direction: column;
     margin: 20px;
+}
+
+.labelinput{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .inpt{
