--- a/components/HomePage/DeliveryLocation.css
+++ b/components/HomePage/DeliveryLocation.css
@@ -5,8 +5,19 @@
     width: 15vw;
 }
 
+.input-field::placeholder {
+    color: black; /* Set your desired color here */
+}
+
 .input-field:hover{
     border: 1px solid #FC8019;
+}
+
+.suggestion{
+    background-color: #9747FF;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 1;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
