--- a/components/HomePage/Hero.css
+++ b/components/HomePage/Hero.css
@@ -74,6 +74,8 @@
     font-weight: 600;
     color: #4F4F4F;
     margin-bottom: 4rem;
+    justify-content: center;
+    align-items: center;
   }
 
 .odd{
@@ -133,5 +135,26 @@
 }
 
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-    /* Styles */
+    .hero-section-img {
+        display: none;
+    }
+
+    .hero-section-text{
+        text-align: center;
+        margin: 0;
+    }
+
+    .hero-desc{
+        margin: 2%;
+    }
+
+    .tag-line{
+        font-size: 30px;
+    }
+
+    .location-start{
+        margin-top: 4%;
+        text-align: center;
+        justify-content: center;
+    }
 }
