--- a/components/HomePage/ShopCard.css
+++ b/components/HomePage/ShopCard.css
@@ -36,11 +36,25 @@
 }
 
 .shop_rating{
-    margin-left: 2rem;
+    margin-left: .4rem;
+}
+
+.shop_rating h6{
+    color: white;
+    background: #9747FF;
+    padding: .2rem;
+    border-radius: 20px;
 }
 
 .shop_dist{
-    margin-right: 2rem;
+    margin-right: .4rem;
+}
+
+.shop_dist h6{
+    color: white;
+    background: #9747FF;
+    padding: .2rem;
+    border-radius: 20px;
 }
 
 
@@ -56,7 +70,8 @@
 
 
 .event_date h6{
-    background: #BFEBB8;
+    color: white;
+    background: #9747FF;
     padding: 2%;
     border-radius: 20px;
     margin-left: auto;
@@ -80,3 +95,21 @@
   .event_details h3:hover {
     color: #000;
   }
+
+  @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .eventDetail_container img{
+        width: 100px;
+        height:100px;
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    .eventDetail_container img{
+        width: 100px;
+        height:100px;
+        margin: 0 auto;
+    }
+}
+
+
