--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -1,3 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+    
+
 .shoppage{
     display: flex;
     flex-direction: column;
@@ -33,17 +41,23 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    justify-content: center;
+}
+
+.shopname{
+    font-size: 32px;
+    font-weight: bold;
 }
 
 .shopmaininfofirstsection{
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     border-radius: 10px;
     padding: 10px;
-    width: 30%;
-    background-color: whitesmoke;
+    /* width: 30%; */
+    /* background-color: whitesmoke; */
     align-items: flex-start;
 }
 
@@ -174,10 +188,15 @@
         margin: 0;
     }
 
+    .shoptagline{
+        font-size: 13px;
+    }
+
     .descriptioncontactdetails{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        font-size: 13px;
     }
 
     .contactdetailspress{
