--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -1,250 +1,42 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-body {
-  font-family: 'Poppins', sans-serif;
-}
-    
-
 .shoppage{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
+    height: 100%;
 }
-
-.bannersection{
+.firstsection{
     display: flex;
     flex-direction: row;
-    width: 100%;
-    margin: 10px;
+    height: 450px;
 }
 
-.shortdescription{
-    width: 500px;
-}
-
-.imagealternator{
+.shopinfo{
+    width: 30%;
     display: flex;
     flex-direction: column;
-    width: 60%;
-    height: 400px;
-}
-
-.imagealternator img{
-    width: 100%;
-    height: 90%;
-    border-radius: 8px;
-}
-
-.shopmaininfo{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
+    align-items: flex-start;
     justify-content: center;
+    padding: 30px;
+    gap: 10px;
+    background-color: skyblue;
 }
 
 .shopname{
-    font-size: 32px;
-    font-weight: bold;
+    font-size: 35px;
+    font-weight: bolder;
 }
 
-.shopmaininfofirstsection{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-    border-radius: 10px;
-    padding: 10px;
-    /* width: 30%; */
-    /* background-color: whitesmoke; */
-    align-items: flex-start;
+.shopnow{
+    background-color: black;
+    color: white;
+    padding: 4px;
+    border-radius: 4px;
 }
 
-.shopmaininfosecondsection{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
-    background-color: whitesmoke;
+.bannerimage{
     width: 70%;
-    margin-left: 10px;
+    height: 100%;
 }
 
-.shoplocation{
-    display: flex;
-    flex-direction: row;
-    font-style: italic;
-    align-items: center;
-    margin-right: 4px;
-}
-
-.bannersectionsubsection{
-    width: 40%;
-    margin-left: 15px;
-}
-
-.shopdescription{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
-    background-color: whitesmoke;
-    padding: 10px;
-}
-
-.shoptagline{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
-    background-color: whitesmoke;
-    padding: 10px;
-}
-
-.descriptionpress{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
-    background-color: whitesmoke;
-    margin-top: 10px;
-    padding: 10px;
-}
-
-.contactdetails{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
-    background-color: whitesmoke;
-    margin-top: 10px;
-    padding: 10px;
-}
-
-.contactdetailspress{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
-    background-color: whitesmoke;
-    padding: 10px;
-    margin-top: 10px;
-    /* width: 30%; */
-}
-
-.second{
-    display: none;
-    flex-direction: column;
-}
-
-.contactdetails:hover{
-    cursor: pointer;
-}
-
-.productsDisplay{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+.bannerimage img{
+    height: 100%;
     width: 100%;
-}
-
-@media only screen and (max-width: 900px) {
-    .imagealternator{
-        width: 70%;
-        height: 250px;
-    }
-
-    .imagealternator img{
-        height: 100%;
-    }
-
-    .shopmaininfofirstsection{
-        width: 30%
-    }
-
-    .bannersectionsubsection{
-        width: 30%;
-    }
-
-    .first{
-        display: none;
-    }
-
-    .second{
-        display: flex;
-    }
-}
-
-@media only screen and (max-width: 772px) {
-    .imagealternator{
-        width: 100%;
-        height: 250px;
-    }
-
-    .imagealternator img{
-        width: 100%;
-        height: 100%;
-    }
-
-    .shopmaininfofirstsection{
-        width: 100%
-    }
-
-    .bannersection{
-        flex-direction: column;
-    }
-
-    .bannersectionsubsection{
-        width: 100%;
-        margin: 0;
-    }
-
-    .shoptagline{
-        font-size: 13px;
-    }
-
-    .descriptioncontactdetails{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        font-size: 13px;
-    }
-
-    .contactdetailspress{
-        margin-top: 0;
-        height: 45%;
-    }
-
-    .descriptionpress{
-        margin-top: 0;
-        height: 45%;
-    }
-
-    .shoptagline{
-        width: 75%;
-    }
-
-    .second{
-        justify-content: space-between;
-        padding-top: 10px;
-        flex-direction: row;
-    }
-}
-
-@media only screen and (max-width: 450px) {
-    .imagealternator{
-        width: 100%;
-        height: 200px; 
-    }
-
-    .imagealternator img{
-        width: 100%;
-        height: 100%;
-    }
-
-    .shopmaininfofirstsection{
-        width: 100%
-    }
-
-    .shoptagline{
-        width: 58%;
-    }
-
-    .bannersection{
-        flex-direction: column;
-    }
-
-    .bannersectionsubsection{
-        width: 100%;
-        margin: 0;
-    }
+    /* border-radius: 20px 0px 0px 20px; */
 }
