--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+@import url('https://fonts.googleapis.com/css?family=Bitter');
+
 .shoppage{
     height: 100%;
+    font-family: 'Poppins';
 }
 .firstsection{
     display: flex;
@@ -21,6 +26,13 @@
 .shopname{
     font-size: 35px;
     font-weight: bolder;
+    font-family: 'Bitter';
+}
+
+.shopdesc {
+    font-family: 'Dancing Script', cursive;
+    font-size: 20px;
+    font-weight: 40px;
 }
 
 .shopnow{
@@ -40,3 +52,21 @@
     width: 100%;
     /* border-radius: 20px 0px 0px 20px; */
 }
+
+@media only screen and (max-width: 668px) {
+    .firstsection{
+        flex-direction: column;
+    }
+
+    .shopinfo{
+        width: 100%;
+    }
+
+    .bannerimage{
+        width: 100%;
+    }
+
+    .shopnow{
+        display:none;
+    }
+  }
