--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -1,146 +1,101 @@
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
-@import url('https://fonts.googleapis.com/css?family=Poppins');
-@import url('https://fonts.googleapis.com/css?family=Bitter');
-@import url('https://fonts.googleapis.com/css?family=Pacifico');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 
-.shoppage{
-    height: 100%;
-    font-family: 'Poppins';
-}
-.firstsection{
-    display: flex;
-    flex-direction: row;
-    height: 450px;
+.shop{
+    width: 100%;
 }
 
-.shopinfobanner{
-    width: 30%;
+.banner{
+    position: relative;
+    width: 100%;
+}
+
+.bannerinfo{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    padding: 30px;
-    gap: 10px;
-    background-color: skyblue;
-}
-
-.shopname{
-    font-size: 35px;
-    font-weight: bolder;
-    font-family: 'Bitter';
-}
-
-.shopdesc {
-    font-family: 'Dancing Script', cursive;
-    font-size: 20px;
-    font-weight: 40px;
-}
-
-.shopnow{
-    background-color: black;
+    position: absolute;
     color: white;
-    padding: 4px;
+    z-index: 1;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 80%, transparent 100%);
+    padding: 20px;
+    height: 600px;
+    width: 30%;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+}
+
+
+.bannershopname{
+    font-size: 50px;
+}
+
+.bannershoptagline{
+    font-family: 'Dancing Script';
+}
+
+.shopnowbutton{
+    padding: 10px;
+    border: 1px solid white;
     border-radius: 4px;
+}
+
+.shopnowbutton:hover{
+    cursor: pointer;
+    background-color: white;
+    color: black;
+}
+
+.viewcards{
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    top: 30%;
+    left: 50%;
+    gap:20px;
+    height: 30%;
+}
+
+.viewcard{
+    padding: 30px;
+    color: white;
+    background: rgba(0, 0, 0, 0.7); /* Dark, semi-transparent background */
+    border-radius: 8px; /* Rounded corners */
+    backdrop-filter: blur(2px); /* Blur effect */
+    transition: background 0.3s;
+    font-size: 20px;
+    font-family: 'Dancing Script';
+    cursor: pointer;
+    width: 150px;
+}
+
+.viewcarddes{
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    opacity: 0.6;
 }
 
 .bannerimage{
-    width: 70%;
-    height: 100%;
+    width: 100%;
 }
 
 .bannerimage img{
-    height: 100%;
     width: 100%;
-    /* border-radius: 20px 0px 0px 20px; */
+    object-fit: cover;
+    height: 600px;
+    filter: blur(2px); 
+    filter: brightness(60%) contrast(100%);
+    animation: zoomIn 1s forwards; /* Zoom in animation */
+
+  /* Set initial state (zoomed out) */
+    transform: scale(1);
 }
 
-.shopnow:hover{
-    background-color: transparent;
-    color: black;
-    border: 1px solid black;
-}
 
-.shopinfo{
-    padding: 20px;
-}
-
-.tags{
-    display: flex;
-    flex-direction: row;
-    gap: 4px;
-}
-
-.tag{
-    padding: 2px;
-    border: 1px solid black;
-    border-radius: 2px;
-    font-size: 13px;
-}
-
-.detailstoggle{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px;
-    border: 1px solid black;
-}
-
-.detailview{
-    padding: 20px
-}
-
-.detail{
-    padding: 10px;
-    border-radius: 4px;
-}
-
-.detail:hover{
-    background-color: black;
-    color: white;
-}
-
-@media only screen and (max-width: 668px) {
-    .firstsection{
-        flex-direction: column;
+@keyframes zoomIn {
+    0% {
+      transform: scale(1.2); /* Zoomed out */
     }
-
-    .shopinfobanner{
-        width: 100%;
-        align-items: center;
-    }
-
-    .bannerimage{
-        width: 100%;
-    }
-
-    .shopname{
-        color: white;
-        font-family: 'Pacifico', cursive;
-    }
-
-    .shopdesc{
-        position: absolute;
-        top: 28%;
-        color: white;
-        font-size: 25px;
-        padding: 20px;
-        text-align: center;
-    }
-
-    .shopnow{
-        position:absolute;
-        top: 44%;
-        background-color: transparent;
-        border: 1px solid white;
-        color: white;
-    }
-
-    .shopnow:hover{
-        background-color: black;
-        color: white;
-    }
-
-    .detailstoggle{
-        font-size: 12px;
+    100% {
+      transform: scale(1); /* Actual size */
     }
   }
