--- a/components/DashBoard.css
+++ b/components/DashBoard.css
@@ -1,9 +1,9 @@
 .dashboard{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    border: 1px solid black;
+    justify-content: space-between; 
     padding: 8px;
+    font-family:cursive;
 }
 
 .companyname{
