--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=montserrat&display=swap');
+
 
 .shop{
     width: 100%;
@@ -27,6 +29,7 @@
 
 .bannershopname{
     font-size: 50px;
+    font-family: 'montserrat';
 }
 
 .bannershoptagline{
@@ -37,6 +40,7 @@
     padding: 10px;
     border: 1px solid white;
     border-radius: 4px;
+    color: white;
 }
 
 .shopnowbutton:hover{
@@ -129,7 +133,7 @@
 
 .contactdetails {
     background-color: #F2C6DE;
-    height: 500px;
+    height: fit-content;
     width: 100%;
     display: flex;
     flex-direction: row;
