--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -20,7 +20,7 @@
     z-index: 1;
     background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 80%, transparent 100%);
     padding: 20px;
-    height: 680px;
+    height: 67vh;
     width: 30%;
     align-items: center;
     justify-content: center;
