--- a/app/[shopid]/page.css
+++ b/app/[shopid]/page.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=montserrat&display=swap');
-
+@import url('https://fonts.google.com/specimen/Cormorant+Garamond&display=swap');
 
 .shop{
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Cormorant Garamond';
 }
 
 .banner{
     position: relative;
     width: 100%;
+    height: 680px;
 }
 
 .bannerinfo{
@@ -172,6 +173,7 @@ a:hover {
     flex-direction: row;
     gap: 30px;
     padding: 40px;
+    flex-wrap: wrap ;
 }
 
 @keyframes zoomIn {
