--- a/components/MobileNavbar.css
+++ b/components/MobileNavbar.css
@@ -7,7 +7,7 @@
     bottom: 0;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
+    width: 100vw;
     padding: 20px;
     backdrop-filter: blur(8px);
 }
