--- a/components/MobileNavbar.css
+++ b/components/MobileNavbar.css
@@ -1,5 +1,4 @@
-
-.mobilenavbar{
+.mobilenavbar {
     position: fixed;
     display: flex;
     flex-direction: row;
@@ -12,6 +11,17 @@
     backdrop-filter: blur(8px);
 }
 
-.icn{
+.icn {
     font-size: 40px;
+}
+
+/* Adjust for smaller screens */
+@media only screen and (max-width: 600px) {
+    .mobilenavbar {
+        padding: 10px;
+    }
+
+    .icn {
+        font-size: 30px;
+    }
 }
