--- a/components/HomePage/DeliveryLocation.css
+++ b/components/HomePage/DeliveryLocation.css
@@ -13,10 +13,16 @@
     border: 1px solid #FC8019;
 }
 
+.suggestions{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
 .suggestion{
     background-color: #9747FF;
     border-radius: 5px;
-    position: absolute;
     z-index: 1;
 }
 
