--- a/components/HomePage/DeliveryLocation.css
+++ b/components/HomePage/DeliveryLocation.css
@@ -24,6 +24,7 @@
     background-color: #9747FF;
     border-radius: 5px;
     z-index: 1;
+    cursor: pointer;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
