Product description page added and product db updated

--- a/app/create/product/page.css
+++ b/app/create/product/page.css
@@ -52,7 +52,29 @@
 
 .avail {
   display: flex;
+  flex-direction: column;
   align-items: center;
+}
+
+.product-available{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.sizes-available{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.colors-available{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 input[type="checkbox"],
